azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "baseName": {
      "type": "string",
      "maxLength": 10,
      "minLength": 3,
      "metadata": {
        "description": "The base name to use as prefix to create all the resources."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "eastus",
      "allowedValues": [
        "eastus",
        "eastus2",
        "southcentralus",
        "southeastasia",
        "westcentralus",
        "westeurope",
        "westus2",
        "centralus",
        "japaneast"
      ],
      "metadata": {
        "description": "Specifies the location for all resources."
      }
    },
        "grant_ip": {
            "type": "string",
            "defaultValue": "確認方法 https://www.cman.jp/network/support/go_access.cgi",
            "metadata": {
                "description": "SQL Serverの接続許可IP"
            }
        }
  },
  
  "variables": {
    "vnetName": "[concat(toLower(parameters('baseName')),'-vnet')]",
    "amlNsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('amlNsgName'))]",

    "amlWorkspaceName": "[concat(toLower(parameters('baseName')),'-aml-ws')]",
    "amlkvName": "[concat(parameters('baseName'),'-aml-kv')]",
    "amlaiName": "[concat(parameters('baseName'),'-aml-ai')]",
    "amlcrName": "[concat(replace(toLower(parameters('baseName')),'-',''),'amlcr')]",
    "amlStorageName": "[concat(replace(toLower(parameters('baseName')),'-',''),'amlsa')]",
    "amlNsgName": "[concat(parameters('baseName'),'-aml-nsg')]",
    "amlSubnetName": "mlcomputes"

  },
  "resources": [

    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-04-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "dependsOn": ["[variables('amlNsgId')]" ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.20.0.0/14"
          ]
        },
        "subnets": [

          {
            "name": "[variables('amlSubnetName')]",
            "properties": {
              "addressPrefix": "10.21.0.0/22",
              "serviceEndpoints": [
                {
                  "service": "Microsoft.Storage",
                  "locations": [
                    "japaneast"
                  ]
                },
                {
                  "service": "Microsoft.Sql",
                  "locations": [
                    "japaneast"
                  ]
                }
              ],
              "delegations": [],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies": "Enabled",
              "networkSecurityGroup": {
                "id": "[variables('amlNsgId')]"
              }
            }
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false,
        "enableVmProtection": false
      }
    },
    {
      "type": "Microsoft.Insights/components",
      "apiVersion": "2015-05-01",
      "name": "[variables('amlaiName')]",
      "location": "[if(or(equals(parameters('location'),'eastus2'),equals(parameters('location'),'westcentralus')),'southcentralus',parameters('location'))]",
      "kind": "web",
      "properties": {
        "Application_Type": "web"
      }
    },
    {
      "type": "Microsoft.ContainerRegistry/registries",
      "apiVersion": "2017-10-01",
      "name": "[variables('amlcrName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "adminUserEnabled": true
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2019-06-01",
      "name": "[variables('amlStorageName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "[resourceId('Microsoft.Storage/storageAccounts', variables('adlsName'))]"
      ],
      "tags": {},
      "sku": {
        "name": "Standard_RAGRS"
      },
      "kind": "StorageV2",
      "properties": {
        "networkAcls": {
          "bypass": "AzureServices",
          "virtualNetworkRules": [
            {
              "id": "[concat(resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vnetName'), 'mlcomputes'))]",
              "action": "Allow"
            }
          ],
          "ipRules": [
            {
              "value": "[parameters('grant_ip')]",
              "action": "Allow"
            }
          ],
          "defaultAction": "Deny"
        },
        "accessTier": "Hot",
        "supportsHttpsTrafficOnly": true,
        "isHnsEnabled": false
      }
    },
    {
      "type": "Microsoft.MachineLearningServices/workspaces",
      "apiVersion": "2018-11-19",
      "name": "[variables('amlWorkspaceName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('amlStorageName'))]",
        "[resourceId('Microsoft.KeyVault/vaults', variables('amlkvName'))]",
        "[resourceId('Microsoft.Insights/components', variables('amlaiName'))]",
        "[resourceId('Microsoft.ContainerRegistry/registries', variables('amlcrName'))]"
      ],
      "identity": {
        "type": "systemAssigned"
      },
      "sku": {
        "tier": "enterprise",
        "name": "enterprise"
      },
      "properties": {
        "friendlyName": "[variables('amlWorkspaceName')]",
        "keyVault": "[resourceId('Microsoft.KeyVault/vaults',variables('amlkvName'))]",
        "applicationInsights": "[resourceId('Microsoft.Insights/components',variables('amlaiName'))]",
        "containerRegistry": "[resourceId('Microsoft.ContainerRegistry/registries',variables('amlcrName'))]",
        "storageAccount": "[resourceId('Microsoft.Storage/storageAccounts/',variables('amlStorageName'))]"
      }
    },

    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-05-01",
      "name": "[variables('amlNsgName')]",
      "location": "japaneast",
      "properties": {

        "securityRules": [
          {
            "name": "AzureBatch",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "29876-29877",
              "sourceAddressPrefix": "BatchNodeManagement",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AzureMachineLearning",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "44224",
              "sourceAddressPrefix": "AzureMachineLearning",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AML",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureMachineLearning",
              "access": "Allow",
              "priority": 3850,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AAD",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "access": "Allow",
              "priority": 3700,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "ARM",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureResourceManager",
              "access": "Allow",
              "priority": 3800,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "ACR",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureContainerRegistry",
              "access": "Allow",
              "priority": 3900,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Storage",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 3950,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyInternet",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 4000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AFDFP",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureFrontDoor.FirstParty",
              "access": "Allow",
              "priority": 3600,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "https-http",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 3980,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "443",
                "80"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    }

  ],
  "outputs": {

  }
}
